# pico-sdk

projects/blink/: CMakeLists.txt
projects/blink/src/: blink.cpp
projects/sd/: CMakeLists.txt
projects/sd/src/: hw_config.c  sd.cpp
